<package>
  <name>rqt_bag</name>
  <version>0.2.16</version>
  <description>rqt_bag provides a GUI plugin for displaying and replaying ROS bag files.</description>
  <maintainer email="ablasdel@willowgarage.com">Aaron Blasdel</maintainer>
  <maintainer email="isao.saito@mavs.uta.edu">Isaac Saito</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_bag</url>
  <url type="repository">https://github.com/ros-visualization/rqt_common_plugins</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_common_plugins/issues</url>

  <author email="ablasdel@willowgarage.com">Aaron Blasdel</author>
  <author>Tim Field</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
