<?xml version="1.0"?>
<package>
  <name>rqt_cpp_common</name>
  <version>0.2.17</version>
  <description>This package provides common functionality for rqt plugins
      written in C++. Despite no plugin is provided, this package is part of
      the rqt_common_plugins repository to keep refactoring generic
      functionality from these common plugins into this package as easy as
      possible.
  </description>

  <maintainer email="130s@2000.jukuin.keio.ac.jp">Isaac Saito</maintainer>
  <license>BSD</license>
  
  <url type="website">http://ros.org/wiki/rqt_cpp_common</url>
  <url type="repository">https://github.com/ros-visualization/rqt_common_plugins</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_common_plugins/issues</url>

  <author email="isaito@willowgarage.com">Isaac Saito</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>  
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>  
  <run_depend>sensor_msgs</run_depend>
  
  <test_depend>rosunit</test_depend>  
</package>