<?xml version="1.0"?>
<package>
  <name>rqt_launch</name>
  <version>0.0.1</version>
  <description>The rqt_launch package</description>

  <maintainer email="130s@lateeye.net">Isaac Saito</maintainer>
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/rqt_launch</url> -->

	<author>Isaac Saito</author>
	<author>Stuart Glacer</author>

	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>roslaunch</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>rqt_gui</run_depend>
	<run_depend>rqt_gui_py</run_depend>
	<run_depend>rqt_py_common</run_depend>
	<test_depend>unittest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
		<rqt_gui plugin="${prefix}/plugin.xml" />
  </export>
</package>