<package>
  <name>rqt_logger_level</name>
  <version>0.2.17</version>
  <description>rqt_logger_level provides a GUI plugin for configuring the logger level of ROS nodes.<br />
   <br />
  rqt_logger_level takes over `wx`-based tool [[rxloggerlevel]].
  </description>
  <maintainer email="ablasdel@willowgarage.com">Aaron Blasdel</maintainer>
  <maintainer email="isao.saito@mavs.uta.edu">Isaac Saito</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_logger_level</url>
  <url type="repository">https://github.com/ros-visualization/rqt_common_plugins</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_common_plugins/issues</url>

  <author email="ablasdel@willowgarage.com">Aaron Blasdel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>rosnode</run_depend>
  <run_depend>rosservice</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
      <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>


