<package>
  <name>rqt_marble</name>
  <version>0.2.9</version>
  <description>
     rqt_marble works as an interface between KDE's Marble library and
     provide following features: 
     
     <ul>
      <li>Publishes GPS coordinates in a path that user sets on global map in
          sensor_msgs::NavSatFix</li>
      <li>Plots single or multiple GPS coordinates of the robot's current
      position</li>
     </ul>
           
     Originally created as marble_plugin by Tobias Baer.
  </description>
  <license>BSD</license>
  <maintainer email="130s@alumni.smu.edu">Isaac Saito</maintainer>
  <author email="isaito@osrfoundation.org">Isaac Saito</author>
  <author email="baer@fzi.de">Tobias Baer</author>

  <url type="website">http://ros.org/wiki/rqt_marble</url>
  <url type="repository">https://github.com/ros-visualization/rqt_robot_plugins/rqt_marble</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_robot_plugins/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>libmarble-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>


