<package>
  <name>rqt_marble</name>
  <version>0.2.17</version>
  <description>
     rqt_marble works as an interface between KDE's Marble library and ROS.
     Utilizing sensor_msgs::NavSatFix, it provides following features: 
     
     <ul>
      <li>Publishes GPS coordinates in a path that user sets on global map</li>
      <li>Plots GPS coordinates of the robot's current positions</li>
     </ul>
           
     Originally created as
     <a href = "http://www.ros.org/wiki/marble_plugin">marble_plugin</a> by
     Tobias Baer.

     DISCLAIMER: as of May 2013, build fails due to <a href = "https://github.com/ros-visualization/rqt_common_plugins/issues/91">a missing in a library rqt_marble depends on</a> on Ubuntu Oneiric. There's no workaround available yet.
  </description>
  <license>BSD</license>
  <maintainer email="130s@alumni.smu.edu">Isaac Saito</maintainer>
  <author email="isaito@osrfoundation.org">Isaac Saito</author>
  <author email="baer@fzi.de">Tobias Baer</author>
  <author email="aiden@fzi.de">Jan Aidel</author>

  <url type="website">http://ros.org/wiki/rqt_marble</url>
  <url type="repository">https://github.com/ros-visualization/rqt_robot_plugins/rqt_marble</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_robot_plugins/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>libmarble-dev</build_depend>
  <build_depend>rqt_cpp_common</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  
  <run_depend>libmarble-dev</run_depend>
  <run_depend>rqt_cpp_common</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  
  <test_depend>rostest</test_depend>  
  
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>


