<package>
  <name>rqt_plotxy</name>
  <version>0.3.13</version>
  <description>rqt_plotxy provides a GUI plugin for visualizing numeric values of a topic with respect to another.</description>
  <maintainer email="rafael.bailon-ruiz@laas.fr">Rafael Bailón-Ruiz</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_plotxy</url>
  <url type="repository">https://github.com/ros-visualization/rqt_common_plugins</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_common_plugins/issues</url>

  <author>Dorian Scholz</author>
  <author>Rafael Bailón-Ruiz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-matplotlib</run_depend>
  <run_depend>python-qt-bindings-qwt5</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend version_gte="0.2.25">qt_gui_py_common</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <run_depend>rqt_plot</run_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
